@@ -10,6 +10,7 @@
 #define SYCONFIG_H
 
 #define SWITCHYARD_LWRP_VERSION "1.1"
+#define SWITCHYARD_LWRP_CONNECTION_TIMEOUT 5000
 #define SWITCHYARD_ADVERTS_ADDRESS "239.192.255.3"
 #define SWITCHYARD_ADVERTS_PORT 4001
 #define SWITCHYARD_CLOCK_ADDRESS "239.192.255.2"
